// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnvelopePositionBar renders three zones + marker for default mid-range CG 1`] = `
<View
  accessibilityLabel="crosswind.envelopeBarLabel"
  accessibilityRole="adjustable"
  accessibilityValue={
    {
      "max": 50,
      "min": 8,
      "now": 25,
    }
  }
  style={
    {
      "width": "100%",
    }
  }
  testID="envelope-bar"
>
  <View
    style={
      {
        "paddingTop": 2,
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="envelope-bar-track"
    >
      <View
        style={
          {
            "backgroundColor": "#003C36",
            "flexGrow": 27,
          }
        }
        testID="envelope-bar-zone-safe"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(255, 176, 32, 0.2)",
            "flexGrow": 6.390000000000001,
          }
        }
        testID="envelope-bar-zone-boundary"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(229, 72, 77, 0.2)",
            "flexGrow": 8.61,
          }
        }
        testID="envelope-bar-zone-out-of-lookup"
      />
      <View
        style={
          [
            {
              "backgroundColor": "#00C2A8",
              "height": 12,
              "marginLeft": -1,
              "position": "absolute",
              "top": -2,
              "width": 2,
            },
            {
              "left": "40.476190476190474%",
            },
          ]
        }
        testID="envelope-bar-marker"
      />
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      8%
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      50%
    </Text>
  </View>
</View>
`;

exports[`EnvelopePositionBar snapshots marker centered (currentCG = midpoint) 1`] = `
<View
  accessibilityLabel="crosswind.envelopeBarLabel"
  accessibilityRole="adjustable"
  accessibilityValue={
    {
      "max": 50,
      "min": 8,
      "now": 29,
    }
  }
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "paddingTop": 2,
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="envelope-bar-track"
    >
      <View
        style={
          {
            "backgroundColor": "#003C36",
            "flexGrow": 27,
          }
        }
        testID="envelope-bar-zone-safe"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(255, 176, 32, 0.2)",
            "flexGrow": 6.390000000000001,
          }
        }
        testID="envelope-bar-zone-boundary"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(229, 72, 77, 0.2)",
            "flexGrow": 8.61,
          }
        }
        testID="envelope-bar-zone-out-of-lookup"
      />
      <View
        style={
          [
            {
              "backgroundColor": "#00C2A8",
              "height": 12,
              "marginLeft": -1,
              "position": "absolute",
              "top": -2,
              "width": 2,
            },
            {
              "left": "50%",
            },
          ]
        }
        testID="envelope-bar-marker"
      />
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      8%
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      50%
    </Text>
  </View>
</View>
`;

exports[`EnvelopePositionBar snapshots marker pinned at left edge (currentCG = axisMin) 1`] = `
<View
  accessibilityLabel="crosswind.envelopeBarLabel"
  accessibilityRole="adjustable"
  accessibilityValue={
    {
      "max": 50,
      "min": 8,
      "now": 8,
    }
  }
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "paddingTop": 2,
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="envelope-bar-track"
    >
      <View
        style={
          {
            "backgroundColor": "#003C36",
            "flexGrow": 27,
          }
        }
        testID="envelope-bar-zone-safe"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(255, 176, 32, 0.2)",
            "flexGrow": 6.390000000000001,
          }
        }
        testID="envelope-bar-zone-boundary"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(229, 72, 77, 0.2)",
            "flexGrow": 8.61,
          }
        }
        testID="envelope-bar-zone-out-of-lookup"
      />
      <View
        style={
          [
            {
              "backgroundColor": "#00C2A8",
              "height": 12,
              "marginLeft": -1,
              "position": "absolute",
              "top": -2,
              "width": 2,
            },
            {
              "left": "0%",
            },
          ]
        }
        testID="envelope-bar-marker"
      />
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      8%
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      50%
    </Text>
  </View>
</View>
`;

exports[`EnvelopePositionBar snapshots marker pinned at right edge (currentCG = axisMax) 1`] = `
<View
  accessibilityLabel="crosswind.envelopeBarLabel"
  accessibilityRole="adjustable"
  accessibilityValue={
    {
      "max": 50,
      "min": 8,
      "now": 50,
    }
  }
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "paddingTop": 2,
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="envelope-bar-track"
    >
      <View
        style={
          {
            "backgroundColor": "#003C36",
            "flexGrow": 27,
          }
        }
        testID="envelope-bar-zone-safe"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(255, 176, 32, 0.2)",
            "flexGrow": 6.390000000000001,
          }
        }
        testID="envelope-bar-zone-boundary"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(229, 72, 77, 0.2)",
            "flexGrow": 8.61,
          }
        }
        testID="envelope-bar-zone-out-of-lookup"
      />
      <View
        style={
          [
            {
              "backgroundColor": "#00C2A8",
              "height": 12,
              "marginLeft": -1,
              "position": "absolute",
              "top": -2,
              "width": 2,
            },
            {
              "left": "100%",
            },
          ]
        }
        testID="envelope-bar-marker"
      />
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      8%
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      50%
    </Text>
  </View>
</View>
`;

exports[`EnvelopePositionBar snapshots regular-width variant (taller bar) 1`] = `
<View
  accessibilityLabel="crosswind.envelopeBarLabel"
  accessibilityRole="adjustable"
  accessibilityValue={
    {
      "max": 50,
      "min": 8,
      "now": 25,
    }
  }
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "paddingTop": 2,
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 12,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="envelope-bar-track"
    >
      <View
        style={
          {
            "backgroundColor": "#003C36",
            "flexGrow": 27,
          }
        }
        testID="envelope-bar-zone-safe"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(255, 176, 32, 0.2)",
            "flexGrow": 6.390000000000001,
          }
        }
        testID="envelope-bar-zone-boundary"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(229, 72, 77, 0.2)",
            "flexGrow": 8.61,
          }
        }
        testID="envelope-bar-zone-out-of-lookup"
      />
      <View
        style={
          [
            {
              "backgroundColor": "#00C2A8",
              "height": 16,
              "marginLeft": -1,
              "position": "absolute",
              "top": -2,
              "width": 2,
            },
            {
              "left": "40.476190476190474%",
            },
          ]
        }
        testID="envelope-bar-marker"
      />
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      8%
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      50%
    </Text>
  </View>
</View>
`;

exports[`EnvelopePositionBar snapshots when Reduce Motion is enabled (marker snaps, no animation) 1`] = `
<View
  accessibilityLabel="crosswind.envelopeBarLabel"
  accessibilityRole="adjustable"
  accessibilityValue={
    {
      "max": 50,
      "min": 8,
      "now": 25,
    }
  }
  style={
    {
      "width": "100%",
    }
  }
>
  <View
    style={
      {
        "paddingTop": 2,
      }
    }
  >
    <View
      style={
        {
          "borderRadius": 4,
          "flexDirection": "row",
          "height": 8,
          "overflow": "hidden",
          "width": "100%",
        }
      }
      testID="envelope-bar-track"
    >
      <View
        style={
          {
            "backgroundColor": "#003C36",
            "flexGrow": 27,
          }
        }
        testID="envelope-bar-zone-safe"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(255, 176, 32, 0.2)",
            "flexGrow": 6.390000000000001,
          }
        }
        testID="envelope-bar-zone-boundary"
      />
      <View
        style={
          {
            "backgroundColor": "rgba(229, 72, 77, 0.2)",
            "flexGrow": 8.61,
          }
        }
        testID="envelope-bar-zone-out-of-lookup"
      />
      <View
        style={
          [
            {
              "backgroundColor": "#00C2A8",
              "height": 12,
              "marginLeft": -1,
              "position": "absolute",
              "top": -2,
              "width": 2,
            },
            {
              "left": "40.476190476190474%",
            },
          ]
        }
        testID="envelope-bar-marker"
      />
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      8%
    </Text>
    <Text
      allowFontScaling={true}
      style={
        [
          {
            "color": "#6E7681",
            "fontFamily": "System",
            "fontSize": 9,
            "fontWeight": "600",
            "letterSpacing": 0.54,
            "lineHeight": 12,
            "textAlign": "auto",
          },
          {
            "textTransform": "uppercase",
          },
        ]
      }
    >
      50%
    </Text>
  </View>
</View>
`;
